--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -63,6 +63,8 @@ http
 
 server
     {
+        # 当nginx接到请求后，会匹配其配置中的service模块
+        # 匹配方法就是将请求携带的host和port去跟配置中的server_name和listen相匹配
         listen 80;
         # server_name video;
         index index.html;
